--- a/split_data.ipynb
+++ b/split_data.ipynb
@@ -20,7 +20,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "76991f45",
    "metadata": {},
    "outputs": [],
@@ -41,7 +41,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "90ce40d1",
    "metadata": {},
    "outputs": [],
@@ -61,7 +61,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "id": "aa68da82",
    "metadata": {},
    "outputs": [],
@@ -82,7 +82,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "id": "c422fb53",
    "metadata": {},
    "outputs": [],
@@ -102,10 +102,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "id": "9e87b713",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Guardado cliente_0.npz con 12000 ejemplos.\n",
+      "Guardado cliente_1.npz con 12000 ejemplos.\n",
+      "Guardado cliente_2.npz con 12000 ejemplos.\n",
+      "Guardado cliente_3.npz con 12000 ejemplos.\n",
+      "Guardado cliente_4.npz con 12000 ejemplos.\n"
+     ]
+    }
+   ],
    "source": [
     "for i, (_, test_idx) in enumerate(splits):\n",
     "    np.savez_compressed(os.path.join(output_dir, f\"cliente_{i}.npz\"),\n",
@@ -116,8 +128,22 @@
   }
  ],
  "metadata": {
+  "kernelspec": {
+   "display_name": ".venv",
+   "language": "python",
+   "name": "python3"
+  },
   "language_info": {
-   "name": "python"
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.12.9"
   }
  },
  "nbformat": 4,
